# devOpsTP

./: DEPLOYMENT.md  docker-compose.yaml
.github/workflows/: ci.yml  deploy.yml
api/: .coverage  Dockerfile-python  main.py  pyproject.toml  pytest.ini
api/src/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
api/tests/: __init__.py  conftest.py  test_main.py  test_weather_endpoints.py  test_weather_service.py
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: prometheus.yml
prometheus/: prometheus.yml
web/: vite.config.ts
